gitops/apps/rhcl-demo/overlays/rhcl2/mcp-vanity.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw-mcp
  namespace: openshift-ingress
spec:
  host: mcp.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
  to:
    kind: Service
    name: rhcl-gw-istio
  port:
    targetPort: 443
  tls:
    termination: passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-mcp
  namespace: rhcl-ai-bot
spec:
  hostnames:
    - mcp.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
      sectionName: https-mcp-public
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - kind: Service
          name: rhcl-ai-bot
          port: 80
