gitops/apps/rhcl-demo/overlays/rhcl2/patch-rhcl2-values.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-gw
  namespace: openshift-ingress
spec:
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-main-public
      port: 443
      protocol: HTTPS
      hostname: rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oidc-public
      port: 443
      protocol: HTTPS
      hostname: oidc-rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oidc-sandbox
      port: 443
      protocol: HTTPS
      hostname: oidc-rhcl-workshop.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-oidc-sandbox-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-external-public
      port: 443
      protocol: HTTPS
      hostname: external-api.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mcp-public
      port: 443
      protocol: HTTPS
      hostname: mcp.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-public-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mcp-sandbox
      port: 443
      protocol: HTTPS
      hostname: mcp.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-mcp-sandbox-tls
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-ai-gw
  namespace: openshift-ingress
spec:
  listeners:
    - name: http-ai
      port: 80
      protocol: HTTP
      hostname: ai.sandbox921.opentlc.com
      allowedRoutes:
        namespaces:
          from: All
    - name: https-ai-sandbox
      port: 443
      protocol: HTTPS
      hostname: ai.sandbox921.opentlc.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: rhcl-gw-ai-sandbox-tls
      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw
  namespace: openshift-ingress
spec:
  host: rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw-oidc
  namespace: openshift-ingress
spec:
  host: oidc-rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rhcl-ui
  namespace: demo
spec:
  hostnames:
    - rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-api
  namespace: demo
spec:
  hostnames:
    - rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ab-demo
  namespace: demo-ab
spec:
  hostnames:
    - rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jwt-demo
  namespace: demo-jwt
spec:
  hostnames:
    - rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-bot-main
  namespace: rhcl-ai-bot
spec:
  hostnames:
    - rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai-bot-ai
  namespace: rhcl-ai-bot
spec:
  hostnames:
    - ai.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-proxy-public
  namespace: demo
spec:
  hostnames:
    - external-api.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-demo
  namespace: rhcl-oidc-portal
spec:
  hostnames:
    - oidc-rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
    - oidc-rhcl-workshop.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-portal
  namespace: rhcl-oidc-portal
spec:
  hostnames:
    - oidc-rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
    - oidc-rhcl-workshop.sandbox921.opentlc.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-callback
  namespace: rhcl-oidc-portal
spec:
  hostnames:
    - oidc-rhcl-workshop.apps.cluster-rjzd5.rjzd5.sandbox921.opentlc.com
    - oidc-rhcl-workshop.sandbox921.opentlc.com
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw
  namespace: openshift-ingress
spec:
  to:
    name: rhcl-gw-istio

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-gw-oidc
  namespace: openshift-ingress
spec:
  to:
    name: rhcl-gw-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhcl-ai-bot
  namespace: rhcl-ai-bot
spec:
  template:
    spec:
      containers:
        - name: app
